    - 'source', 'showsrc', 'build-dep':
      - Implemented binary-to-source mapping as second-chance try if supplied
        source package doesn't exist. Thanks to Steve Cotton.
    - 'source':
      - Verify hash sums for .dsc files too.
  * Cupt:
    - Cache:
      - BinaryVersion:
        - Require only one hash sum to be specified.
      - 'get_original_apt_pin': don't attempt to pin source versions by source
         package names, they are applicable only to binary versions.
      - Parsing release info: don't require codename to be specified.
      - Parsing release info: don't require version to be specified.
      - Parsing release info: don't require description to be specified.
      - 'verify_hash_sums': advanced to verify only hash sums specified in
        parameter.
    - Core:
      - New free subroutine 'are_hash_sums_present'.
      - New free subroutine 'compare_hash_sums'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 07 Jul 2009 19:20:32 +0300

cupt (0.3.1) unstable; urgency=low

  * cupt:
    - New 'policysrc' subcommand.
  * Cupt:
    - Download:
      - Progress:
        - New method 'get_overall_estimated_time'.
      - Progresses/Console:
        - Display estimated time while downloading.
    - Cache:
      - SourceVersion:
        - Don't choke on native Debian source packages.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Sun, 05 Jul 2009 12:30:47 +0300

cupt (0.3.0) unstable; urgency=low

  * cupt:
    - New 'showsrc' subcommand.
    - New 'build-dep' subcommand.
    - New 'source' subcommand.
  * Cupt:
    - Cache:
      - ArchitecturedRelation:
        - Implemented.
      - SourceVersion:
        - Implemented.
      - Package:
        - 'get_versions': generate exception if there are no valid version
          entries for the package.
      - New method 'get_source_package'.
      - 'get_pin': fixed to not attempt to obtain installed version for source
        packages.